subtracted 15px from container width to prevent horizontal scroll bar from appearing

--- a/main.css
+++ b/main.css
@@ -2,7 +2,8 @@
   /* border: 3px solid green; */
   display: flex;
   flex-wrap: wrap;
-  width: calc(100vw - 10px);
+  width: calc(100vw - 15px);
+  /* width: 1000; */
 }
 
 #mapAndControls {
